tests/golden/defaults/nvidia-gpu-operator/nvidia-gpu-operator/30_clusterpolicy.yaml
apiVersion: nvidia.com/v1
kind: ClusterPolicy
metadata:
  name: gpu-cluster-policy
spec:
  daemonsets:
    rollingUpdate:
      maxUnavailable: '1'
    updateStrategy: RollingUpdate
  dcgmExporter:
    serviceMonitor:
      enabled: true
  devicePlugin:
    mps:
      root: /run/nvidia/mps
  driver:
    kernelModuleType: auto
    licensingConfig:
      nlsEnabled: true
    upgradePolicy:
      autoUpgrade: true
      drain:
        deleteEmptyDir: false
        enable: false
        force: false
        timeoutSeconds: 300
      maxParallelUpgrades: 1
      maxUnavailable: 25%
      podDeletion:
        deleteEmptyDir: false
        force: false
        timeoutSeconds: 300
      waitForCompletion:
        timeoutSeconds: 0
  mig:
    strategy: single
  nodeStatusExporter:
    enabled: true
  operator:
    defaultRuntime: crio
    use_ocp_driver_toolkit: true
  sandboxDevicePlugin:
    enabled: true
  vfioManager:
    enabled: true
  vgpuDeviceManager:
    enabled: true
  vgpuManager:
    enabled: false
